Bug 108914 - blocky shadow artifacts in The Forest with DXVK, RADV_DEBUG=nohiz fixes this
Summary: blocky shadow artifacts in The Forest with DXVK, RADV_DEBUG=nohiz fixes this
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Vulkan/radeon (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: mesa-dev
QA Contact: mesa-dev
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-11-30 13:51 UTC by tempel.julian
Modified: 2018-12-05 16:04 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
screenshot showing the artifacts with medium shadow details (6.43 MB, image/png)
2018-11-30 13:51 UTC, tempel.julian
Details
The Forest renderdoc log part 1 (390.00 MB, application/x-7z-compressed)
2018-11-30 17:54 UTC, tempel.julian
Details
The Forest renderdoc log part 2 (390.00 MB, application/octet-stream)
2018-11-30 18:00 UTC, tempel.julian
Details
The Forest renderdoc log part 3 (390.00 MB, application/octet-stream)
2018-11-30 18:07 UTC, tempel.julian
Details
The Forest renderdoc log part 4 (106.18 MB, application/octet-stream)
2018-11-30 18:21 UTC, tempel.julian
Details
possible fix (5.28 KB, patch)
2018-12-03 18:35 UTC, Samuel Pitoiset
Details | Splinter Review

Description tempel.julian 2018-11-30 13:51:08 UTC
Created attachment 142665 [details]
screenshot showing the artifacts with medium shadow details

Shadows in the game The Forest show blocky artifacts, especially at lower detail settings like "medium".
The corruption disappears when using the RADV_DEBUG=nohiz variable. amdvlk doesn't show this issue either.

The game should work by simply installing Steam into Wine and then install the game normally inside Steam. Wine-Staging should be used to avoid some mouse control issues.
Comment 1 tempel.julian 2018-11-30 13:52:53 UTC
Forgot to add the used versions:
mesa-git 19.0.0_devel.105999.89b4798c06
llvm-svn 8.0.0svn_r347844

But happens also with latest stable versions.
Comment 2 Samuel Pitoiset 2018-11-30 14:00:27 UTC
Thanks for the report. Can you try to record a renderdoc capture please?
Comment 3 tempel.julian 2018-11-30 14:03:16 UTC
Thanks for your quick reply. I can definitely try this, but since I'm not experienced in that, I can't promise to do it before the holidays.
Comment 4 tempel.julian 2018-11-30 16:49:28 UTC
I launched "renderdoccmd capture wine64 TheForest.exe" and saved a capture via button. Stupid question now: Where is it? :)
Comment 5 Danylo 2018-11-30 16:51:03 UTC
Should be in /tmp/RenderDoc/
Comment 6 tempel.julian 2018-11-30 17:01:14 UTC
Thanks, found it. Compressing and uploading it right now.
Comment 7 tempel.julian 2018-11-30 17:54:56 UTC
Created attachment 142674 [details]
The Forest renderdoc log part 1
Comment 8 tempel.julian 2018-11-30 18:00:59 UTC
Created attachment 142675 [details]
The Forest renderdoc log part 2
Comment 9 tempel.julian 2018-11-30 18:07:30 UTC
Created attachment 142676 [details]
The Forest renderdoc log part 3
Comment 10 tempel.julian 2018-11-30 18:21:01 UTC
Created attachment 142679 [details]
The Forest renderdoc log part 4
Comment 11 Samuel Pitoiset 2018-12-03 13:29:16 UTC
Interesting to see that RADV_DEBUG=nofastclears also fixes the problem. Totally unexpected to be honest.
Comment 12 Samuel Pitoiset 2018-12-03 18:35:50 UTC
Created attachment 142705 [details] [review]
possible fix

Can you try the attached patch?
Comment 13 tempel.julian 2018-12-03 20:15:31 UTC
(In reply to Samuel Pitoiset from comment #12)
> Created attachment 142705 [details] [review] [review]
> possible fix
> 
> Can you try the attached patch?

It fixes the problem, thanks a lot. :)

I also gave it a try with native DX11 on Windows and my impression is that the result of dxvk + radv looks totally identical now.
Comment 14 Samuel Pitoiset 2018-12-03 22:13:53 UTC
Thanks for confirming.

Patch is here: https://patchwork.freedesktop.org/series/53440/
Comment 16 tempel.julian 2018-12-05 16:04:40 UTC
Looking fine now with mesa-git, thanks again!


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.